@@ -15,6 +15,7 @@ main(void)
 exec sql begin declare section;
 	char db[200];
 	char id[200];
+	char *user="connectuser";
 exec sql end declare section;
 
 	ECPGdebug(1, stderr);
@@ -49,7 +50,7 @@ exec sql end declare section;
 	exec sql connect to "unix:postgresql://localhost/connectdb" as main user connectuser;
 	exec sql disconnect main;
 
-	exec sql connect to 'unix:postgresql://localhost/connectdb' as main user connectuser;
+	exec sql connect to 'unix:postgresql://localhost/connectdb' as main user :user;
 	exec sql disconnect main;
 
 	exec sql connect to "unix:postgresql://200.46.204.71/connectdb" as main user connectuser;
