@@ -2272,6 +2272,13 @@ Tue, 06 Nov 2007 09:29:22 +0100
 Fri, 21 Dec 2007 15:30:39 +0100
 
 	- Fixed a few minor glitches pointed out by splint.
+
+Fri, 28 Dec 2007 12:15:38 +0100
+
+	- Applied patch send by ITAGAKI Takahiro
+	  <itagaki.takahiro@oss.ntt.co.jp> to fix bug in connect statement if
+	  user name is a variable. 
+	- Also fixed test case that didn't detect this.
 	- Set pgtypes library version to 3.0.
 	- Set compat library version to 3.0.
 	- Set ecpg library version to 6.0.
